---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: ????
  Changes:
    - Removed mod GUI button, it is replaced by a shortcut
    - Replaced the chef hat book icon with a proper "search recipe book" icon
    - Refactored search loop to make adding more features easier
    - Removed lualib and made it a separate mod, RaiLuaLib, that this mod now depends on
  Bugfixes:
    - Fixed crash when a clicking an object with rich text in the name (Krastorio 2)
    - Fixed GUI alignment issues caused by style changes in 0.18.13
    - Fixed potential issues with conditionally registered handlers losing their correlations with custom mod events when configuration changes
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2020-03-08
  Features:
    - Added a function to the remote interface to return the current API version
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2020-02-15
  Bugfixes:
    - Fixed a crash when opening a material from the recipe page (bad pattern matching)
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2020-02-12
  Bugfixes:
    - Fixed incompatibilities with Quick Item Search
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020-02-12
  Changes:
    - Recipe amounts and crafting times are now shown in a slightly bold font
  Bugfixes:
    - Fixed a crash when reading a product with a variable amount of materials
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020-02-11
  Features:
    - Added support for the /retranslate-all-dictionaries command, which will retranslate all of your dictionaries